# sparkle

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  package.xml  setup.py  sparkle.kra
config/: magna.rviz  sparkle.rviz
docs/: Makefile  make.bat
docs/source/: conf.py  index.md  index.rst
examples/: api_call.py  circle_impl.py  circle_simulation.py  lane_simulation.py
include/sparkle/: controller.hh  sparkle.hh
launch/: bagplay.launch  bicycle.launch  carfollowing.launch  default_swil.launch  director.launch  empty.launch  leader_ego.launch  leadervel.launch  micromodel.launch  micromodel_multi.launch  multi_ego.launch  rl_FSMAX.launch  rlpredict.launch  sclock.launch  set_gzrtf.launch  sparkle_spawn.launch  spawn.launch  stepvel.launch  three.launch  threelanes.launch  vel.launch  velinjector.launch
mfiles/: readbag.m
src/: Bagplot.py  Circle_Test_n_1_2019-11-06-22-40-52.bag.active  GZStats.py  api.py  api_call.py  bicycle.cpp  carfollowing.py  catlaunch.py  circle.py  circle_impl.py  cmd_sparkle.cc  companion_timer.cpp  controller.cc  displayFig.py  distance.cc  micromodel_controller.cc  model_state.cc  model_state.py  mymath.cc  odom.cc  odom2path.py  pause.cpp  relvel.cpp  sclock.cpp  sparkle.cc  sparkle.py  states_wnode.cpp  testCircle.py  tf.cc  transform.cpp  unit_dynamics.cpp  yawplot.py
src/sparkle/: Bagplot.py  GZStats.py  __init__.py  api.py  api_call.py  api_call_catvehicle.py  api_lane.py  bagplot.py  bagreader.py  carfollowing.py  catvehicle.py  circle.py  circle_impl.py  gazebo_rtf.py  gzstats.py  lane.py  launch.py  launch_impl.py  layout.py  layout_impl.py  plot_util.py  sparkle.py  testCircle.py  vehicle.py  velinjector.py  yawplot.py
src/sparkle/control/: __init__.py  carfollowing.py  velinjector.py
src/sparkle/layout/: __init__.py  catvehicle.py  circle.py  lane.py  layout.py
src/sparkle/log/: __init__.py  log.py  rosbag_record.py
src/sparkle/viz/: __init__.py
urdf/: laser.gazebo  sparkle.gazebo  sparkle.xacro
worlds/: cars.world  cars_alot_onelane.world  cars_alot_twolane.world  grid.world  gridx.world  plane.world  twolane_cars.world  world.stub
